<resources>
    <string name="app_name">Carworkz Assignment</string>
    <string name="filter_text">Filter User</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">"OK"</string>
    <string name="error_filter_name">"Please enter user name"</string>
    <string name="hint_filter_name">"Enter user name"</string>

    <string name="hint_email">"Enter email"</string>
    <string name="hint_password">"Enter password"</string>
    <string name="submit_text">"Submit"</string>
    <string name="loading">"Loading&#8230;"</string>
    <string name="skip_text">"SKIP"</string>
    <string name="error_authentication_failed">"Authentication failed."</string>

    <string name="error_please_enter_email_address">"Please enter email address"</string>
    <string name="error_please_enter_password">"Please enter password"</string>


</resources>
