<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textSize="@dimen/_12sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/bg_edittext_underline"
        android:inputType="textEmailAddress" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textSize="@dimen/_12sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_edittext_underline"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_28sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_submit"
        android:textColor="@color/white"
        android:text="@string/submit_text" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_auth_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/skip_text"
        />


</LinearLayout>