<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:id="@+id/rl_parent_view">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_filter_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_text"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="#000000"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_filter_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_filter_name"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/color_303030"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/bg_edittext_underline"
            android:layout_below="@+id/tv_filter_header"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:paddingBottom="@dimen/_8sdp"
            />



        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_filter_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cancel"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="#000000"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/et_filter_user_name"
            android:layout_toLeftOf="@+id/tv_filter_ok"
            android:layout_toStartOf="@+id/tv_filter_ok"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_filter_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ok"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="#000000"
            android:layout_below="@+id/et_filter_user_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

    </RelativeLayout>

</RelativeLayout>
